feat(css) : section 1/2 desktop view => 40min

--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap" rel="stylesheet" />
 
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
-
+    <link rel="stylesheet" href="style.css" />
     <title>Frontend Mentor | Bookmark landing page</title>
   </head>
   <body>
@@ -37,7 +40,7 @@
     </header>
 
     <main>
-      <section>
+      <section id="heroSection">
         <article>
           <h1>A Simple Bookmark Manager</h1>
           <p>
@@ -49,14 +52,14 @@
         <img src="./images/illustration-hero.svg" alt="illustration hero page" />
         <div class="shapeBg" role="img"></div>
       </section>
-      <section>
+      <section id="featureSection">
         <h2>Features</h2>
         <p>
           Our aim is to make it quick and easy for you to access your favourite websites. Your bookmarks sync between your devices so you can access
           them on the go.
         </p>
         <ul>
-          <li><p>Simple Bookmarking</p></li>
+          <li class="active"><p>Simple Bookmarking</p></li>
           <li><p>Speedy Searching</p></li>
           <li><p>Easy Sharing</p></li>
         </ul>
@@ -92,7 +95,7 @@
         </div>
       </section>
 
-      <section>
+      <section id="extensionSection">
         <h2>Download the extension</h2>
         <p>We’ve got more browsers in the pipeline. Please do let us know if you’ve got a favourite you’d like us to prioritize.</p>
 
@@ -124,7 +127,7 @@
         </div>
       </section>
 
-      <section>
+      <section id="accordionSection">
         <h2>Frequently Asked Questions</h2>
         <p>Here are some of our FAQs. If you have any other questions you’d like answered please feel free to email us.</p>
         <div id="accordion">
