addon(css) : carousel fonctionality class depends => 5min

--- a/index.html
+++ b/index.html
@@ -59,13 +59,12 @@
           them on the go.
         </p>
         <ul>
-          <li class="active"><p>Simple Bookmarking</p></li>
+          <li><p>Simple Bookmarking</p></li>
           <li><p>Speedy Searching</p></li>
-          <li><p>Easy Sharing</p></li>
+          <li class="active"><p>Easy Sharing</p></li>
         </ul>
         <div id="carouselContainer">
-          <div class="shapeBg" role="img"></div>
-          <div class="carousel" data-visible="true">
+          <div class="carousel">
             <img src="./images/illustration-features-tab-1.svg" alt="illustration page" />
             <article>
               <h2>Bookmark in one click</h2>
@@ -76,7 +75,7 @@
               <button>More Info</button>
             </article>
           </div>
-          <div class="carousel" data-visible="false">
+          <div class="carousel">
             <img src="./images/illustration-features-tab-2.svg" alt="illustration page" />
             <article>
               <h2>Intelligent search</h2>
@@ -84,7 +83,7 @@
               <button>More Info</button>
             </article>
           </div>
-          <div class="carousel" data-visible="false">
+          <div class="carousel">
             <img src="./images/illustration-features-tab-3.svg" alt="illustration page" />
             <article>
               <h2>Share your bookmarks</h2>
@@ -93,6 +92,7 @@
             </article>
           </div>
         </div>
+        <div class="shapeBg" role="img"></div>
       </section>
 
       <section id="extensionSection">
