--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
           them on the go.
         </p>
         <ul>
-          <li><p>Simple Bookmarking</p></li>
+          <li class="active"><p>Simple Bookmarking</p></li>
           <li><p>Speedy Searching</p></li>
-          <li class="active"><p>Easy Sharing</p></li>
+          <li><p>Easy Sharing</p></li>
         </ul>
         <div id="carouselContainer">
           <div class="carousel">
@@ -101,27 +101,27 @@
 
         <div class="extensionCardContainer">
           <article class="extensionCard">
-            <di>
+            <div>
               <img src="./images/logo-chrome.svg" alt="" />
               <h3>Add to Chrome</h3>
               <p>Minimum version 62</p>
-            </di>
+            </div>
             <button>Add & Install Extension</button>
           </article>
           <article class="extensionCard">
-            <di>
+            <div>
               <img src="./images/logo-firefox.svg" alt="" />
               <h3>Add to Firefox</h3>
               <p>Minimum version 55</p>
-            </di>
+            </div>
             <button>Add & Install Extension</button>
           </article>
           <article class="extensionCard">
-            <di>
+            <div>
               <img src="./images/logo-opera.svg" alt="" />
               <h3>Add to Opera</h3>
               <p>Minimum version 46</p>
-            </di>
+            </div>
             <button>Add & Install Extension</button>
           </article>
         </div>
@@ -133,7 +133,21 @@
         <div id="accordion">
           <article data-open="false">
             <h4>What is Bookmark?</h4>
-            <img src="./images/icon-arrow.svg" alt="" />
+            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="12">
+              <path fill="none" stroke="#5267DF" stroke-width="3" d="M1 1l8 8 8-8" />
+            </svg>
+            <div>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tincidunt justo eget ultricies fringilla. Phasellus blandit ipsum quis
+                quam ornare mattis.
+              </p>
+            </div>
+          </article>
+          <article data-open="false">
+            <h4>How can I request a new browser?</h4>
+            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="12">
+              <path fill="none" stroke="#5267DF" stroke-width="3" d="M1 1l8 8 8-8" />
+            </svg>
             <div>
               <p>
                 Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdiet. Vivamus luctus eros
@@ -144,7 +158,9 @@
           </article>
           <article data-open="false">
             <h4>Is there a mobile app?</h4>
-            <img src="./images/icon-arrow.svg" alt="" />
+            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="12">
+              <path fill="none" stroke="#5267DF" stroke-width="3" d="M1 1l8 8 8-8" />
+            </svg>
             <div>
               <p>
                 Sed consectetur quam id neque fermentum accumsan. Praesent luctus vestibulum dolor, ut condimentum urna vulputate eget. Cras in ligula
@@ -154,7 +170,9 @@
           </article>
           <article data-open="false">
             <h4>What about other Chromium browsers?</h4>
-            <img src="./images/icon-arrow.svg" alt="" />
+            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="12">
+              <path fill="none" stroke="#5267DF" stroke-width="3" d="M1 1l8 8 8-8" />
+            </svg>
             <div>
               <p>
                 Integer condimentum ipsum id imperdiet finibus. Vivamus in placerat mi, at euismod dui. Aliquam vitae neque eget nisl gravida
@@ -167,11 +185,14 @@
       </section>
 
       <section id="joinSection">
-        <strong>35,000+ already joined</strong>
-        <h2>Stay up-to-date with what we’re doing</h2>
-        <form>
-          <input type="email" name="email" />
+        <sub>35,000+ already joined</sub>
+        <h2>
+          Stay up-to-date with what<br />
+          we’re doing
+        </h2>
+        <form method="post">
           <label for="email">Whoops, make sure iy's an email</label>
+          <input type="email" name="email" placeholder="Enter your email address"/>
           <button type="submit">Contact Us</button>
         </form>
       </section>
@@ -204,5 +225,9 @@
         </li>
       </ul>
     </footer>
+
+    <script>
+      document.querySelector("form").addEventListener("submit", (e) => e.preventDefault());
+    </script>
   </body>
 </html>
