feat(js) : carousel feature

--- a/index.html
+++ b/index.html
@@ -226,8 +226,7 @@
       </ul>
     </footer>
 
-    <script>
-      document.querySelector("form").addEventListener("submit", (e) => e.preventDefault());
+    <script src="main.js">
     </script>
   </body>
 </html>
