feat(js) : form handle errors

--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
           we’re doing
         </h2>
         <form method="post">
-          <label for="email">Whoops, make sure iy's an email</label>
-          <input type="email" name="email" placeholder="Enter your email address"/>
+          <label for="email">Whoops, make sure it's an email</label>
+          <input type="text" name="email" placeholder="Enter your email address" />
           <button type="submit">Contact Us</button>
         </form>
       </section>
@@ -226,7 +226,6 @@
       </ul>
     </footer>
 
-    <script src="main.js">
-    </script>
+    <script src="main.js"></script>
   </body>
 </html>
