feat(css) : responsive design => 1h30

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap" rel="stylesheet" />
-
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
     <link rel="stylesheet" href="style.css" />
     <title>Frontend Mentor | Bookmark landing page</title>
@@ -36,7 +35,7 @@
           <li><button>Login</button></li>
         </ul>
       </nav>
-      <span tabindex="0" role="img"></span>
+      <span tabindex="0" role="img" id="burgerMenu"></span>
     </header>
 
     <main>
