fix : mobil view optimal

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
           them on the go.
         </p>
         <ul>
-          <li class="active"><p>Simple Bookmarking</p></li>
-          <li><p>Speedy Searching</p></li>
-          <li><p>Easy Sharing</p></li>
+          <li class="active" tabindex="0"><p>Simple Bookmarking</p></li>
+          <li tabindex="0"><p>Speedy Searching</p></li>
+          <li tabindex="0"><p>Easy Sharing</p></li>
         </ul>
         <div id="carouselContainer">
           <div class="carousel">
@@ -131,8 +131,8 @@
         <p>Here are some of our FAQs. If you have any other questions you’d like answered please feel free to email us.</p>
         <div id="accordion">
           <article data-open="false">
-            <h4>What is Bookmark?</h4>
-            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="12">
+            <h4 tabindex="0">What is Bookmark?</h4>
+            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="12" tabindex="0">
               <path fill="none" stroke="#5267DF" stroke-width="3" d="M1 1l8 8 8-8" />
             </svg>
             <div>
@@ -143,8 +143,8 @@
             </div>
           </article>
           <article data-open="false">
-            <h4>How can I request a new browser?</h4>
-            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="12">
+            <h4 tabindex="0">How can I request a new browser?</h4>
+            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="12" tabindex="0">
               <path fill="none" stroke="#5267DF" stroke-width="3" d="M1 1l8 8 8-8" />
             </svg>
             <div>
@@ -156,8 +156,8 @@
             </div>
           </article>
           <article data-open="false">
-            <h4>Is there a mobile app?</h4>
-            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="12">
+            <h4 tabindex="0">Is there a mobile app?</h4>
+            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="12" tabindex="0">
               <path fill="none" stroke="#5267DF" stroke-width="3" d="M1 1l8 8 8-8" />
             </svg>
             <div>
@@ -168,8 +168,8 @@
             </div>
           </article>
           <article data-open="false">
-            <h4>What about other Chromium browsers?</h4>
-            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="12">
+            <h4 tabindex="0">What about other Chromium browsers?</h4>
+            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="12" tabindex="0">
               <path fill="none" stroke="#5267DF" stroke-width="3" d="M1 1l8 8 8-8" />
             </svg>
             <div>
@@ -180,7 +180,7 @@
             </div>
           </article>
         </div>
-        <button class="cta">More Info</button>
+        <button class="cta" tabindex="0">More Info</button>
       </section>
 
       <section id="joinSection">
